fixed table overflow

--- a/src/output.css
+++ b/src/output.css
@@ -793,6 +793,15 @@ video {
   width: 100%;
 }
 
+.w-\[10px\] {
+  width: 10px;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-\[1024px\] {
   max-width: 1024px;
 }
@@ -803,6 +812,10 @@ video {
 
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-96 {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -946,8 +959,16 @@ video {
   gap: 1rem;
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-clip {
+  overflow: clip;
 }
 
 .overflow-y-auto {
